@@ -53,6 +53,7 @@ Version 1.0.8.10
      * Fixed incorrect highlighting of certain keywords in Erlang (SF#3138853, BenBE)
      * Escape chars in C++/C++QT handled incorrectly (SF#3122706, C. Pötsch)
      * Empty parameters of LaTeX commands tipped the highlighting off (SF#3098329, James Oldfield, BenBE)
+     * Additional Keywords and minor tweaks to Logtalk (Paulo Moura)
 Version 1.0.8.9
   -  Added language files
      * Algol68 (Neville Dempsey)
